--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -13,9 +13,12 @@
             <div class="toolbar">
                 <p>
                     <a class="{{ config['CSS']['button']['primary'] }}" href="/static/manual/index.html" target="_blank">
-                        <i class="fas fa-book"></i> {{ _('manual')|uc_first}}
+                        <i class="fas fa-book"></i> {{ _('manual')|uc_first }}
                     </a>
                     {{ _('model')|button(url_for('model_index')) }}
+                    <a class="{{ config['CSS']['button']['primary'] }}" href="{{ url_for('reference_system_index') }}">
+                        {{ _('reference system')|uc_first }}
+                    </a>
                 </p>
                 <p>
                     {{ _('want a new feature or experience any problems')|uc_first }}:
