--- a/openatlas/templates/reference_system/view.html
+++ b/openatlas/templates/reference_system/view.html
@@ -9,7 +9,7 @@
         {{ 'menu/reference_system'|manual }}
         {% if 'manager'|is_authorized %}
             {{ _('edit')|button(url_for('reference_system_update', id_=entity.id)) }}
-            {% if not entity.forms %}
+            {% if not entity.forms and not entity.system %}
                 {{ entity|display_delete_link }}
             {% endif %}
         {% endif %}
