--- a/openatlas/templates/reference_system/index.html
+++ b/openatlas/templates/reference_system/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <div class="toolbar">
-        {{ 'tools/reference_system'|manual }}
+        {{ 'menu/reference_system'|manual }}
         {% if 'contributor'|is_authorized %}
             {{ _('reference system')|button(url_for('reference_system_insert')) }}
         {% endif %}
