Reference systems: manual

--- a/openatlas/templates/reference_system/update.html
+++ b/openatlas/templates/reference_system/update.html
@@ -14,5 +14,5 @@
             {{ _('reload')|button(url_for('reference_system_update', id_=entity.id)) }}
         </p>
     {% endif %}
-    {{ form|display_form(manual_page='menu/reference_system') }}
+    {{ form|display_form(manual_page='form/reference_system') }}
 {% endblock %}
