--- a/openatlas/templates/reference_system/insert.html
+++ b/openatlas/templates/reference_system/insert.html
@@ -4,5 +4,5 @@
     <a href="{{ url_for('reference_system_index') }}">{{ _('reference system')|uc_first }}</a>&nbsp;> +
 {% endblock %}
 {% block content %}
-    {{ form|display_form(manual_page='menu/reference_system') }}
+    {{ form|display_form(manual_page='form/reference_system') }}
 {% endblock %}
