--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -49,7 +49,9 @@
                             </p>
                             <script>
                                 $( function() {
-                                    $("#disk-size").progressbar({value: {{ disk_space_info.percent }} });
+                                    $("#disk-size").progressbar({
+                                        value: {{ disk_space_info.percent }}
+                                    });
                                 });
                             </script>
                         {% endif %}
