Refactor: added Markup to table display function

--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -12,5 +12,5 @@
             {% endfor %}
         </div>
     {% endif %}
-    {{ table.display()|safe }}
+    {{ table.display() }}
 {% endblock %}
