--- a/openatlas/templates/admin/newsletter.html
+++ b/openatlas/templates/admin/newsletter.html
@@ -12,7 +12,7 @@
             {{ form.save(class_=config['CSS']['button']['primary']) }}
         </div>
         <div style="float:left;margin-left:1em;">
-            {{ table.display()|safe }}
+            {{ table.display() }}
         </div>
     </form>
 {% endblock %}
