--- a/openatlas/templates/export/export_csv.html
+++ b/openatlas/templates/export/export_csv.html
@@ -13,5 +13,5 @@
     {% else %}
         <p><span class="error">{{ _('directory not writable')|uc_first }}: export/csv</span></p>
     {% endif %}
-    <div style="float:left;">{{ table.display()|safe }}</div>
+    <div style="float:left;">{{ table.display() }}</div>
 {% endblock %}
