--- a/openatlas/templates/hierarchy/update.html
+++ b/openatlas/templates/hierarchy/update.html
@@ -9,7 +9,7 @@
             {{ form|display_form(manual_page='form/type') }}
         </div>
         <div class="col">
-            {{ table.display()|safe }}
+            {{ table.display() }}
         </div>
     </div>
 {% endblock %}
