--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -37,7 +37,7 @@
                     {{ _('preview')|uc_first }}
                 {% endif %}
             </h2>
-            {{ table.display()|safe }}
+            {{ table.display() }}
         {% endif %}
     {% endif %}
 {% endblock %}
