--- a/openatlas/templates/import/project_view.html
+++ b/openatlas/templates/import/project_view.html
@@ -34,7 +34,7 @@
                 </div>
                 {% if table.rows %}
                     <div class="tab-pane fade" role="tabpanel" id="tab-entities">
-                        {{ table.display()|safe }}
+                        {{ table.display() }}
                     </div>
                 {% endif %}
             </div>
