--- a/openatlas/templates/search/index.html
+++ b/openatlas/templates/search/index.html
@@ -31,7 +31,7 @@
             </form>
         </div>
         <div class="col-9">
-            {{ table.display()|safe }}
+            {{ table.display() }}
         </div>
     </div>
     <script>
