--- a/openatlas/templates/user/activity.html
+++ b/openatlas/templates/user/activity.html
@@ -5,5 +5,5 @@
 {% endblock %}
 {% block content %}
     {{ form|display_form }}
-    {{ table.display()|safe }}
+    {{ table.display() }}
 {% endblock %}
