--- a/openatlas/templates/admin/check_similar.html
+++ b/openatlas/templates/admin/check_similar.html
@@ -7,7 +7,7 @@
     {{ form|display_form(manual_page='admin/data_integrity_checks')}}
     {% if table %}
         {% if table.rows %}
-            {{ table.display()|safe }}
+            {{ table.display() }}
         {% else %}
             <p>{{ _('no entries')|uc_first }}</p>
         {% endif %}
