--- a/openatlas/templates/admin/log.html
+++ b/openatlas/templates/admin/log.html
@@ -8,5 +8,5 @@
         {{ _('delete all logs')|button(url_for('admin_log_delete'), onclick="return confirm('" + _('delete all logs')|uc_first + "?')") }}
     </div>
     {{ form|display_form }}
-    {{ table.display()|safe }}
+    {{ table.display() }}
 {% endblock %}
