--- a/openatlas/templates/model/class_entities.html
+++ b/openatlas/templates/model/class_entities.html
@@ -4,5 +4,5 @@
     {{ [[_('model'), 'model_index'], [_('classes'), 'class_index'], class_|link, _('entities')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ table.display()|safe }}
+    {{ table.display() }}
 {% endblock %}
