--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -12,7 +12,7 @@
                     {{ _('place')|button(url_for('place_insert')) }}
                 {% endif %}
             </div>
-            {{ table.display()|safe }}
+            {{ table.display() }}
         </div>
         {% if gis_data %}
             <div class="col">
