--- a/openatlas/templates/login/index.html
+++ b/openatlas/templates/login/index.html
@@ -19,6 +19,6 @@
         </p>
     {% endif %}
     <p>
-        <a href="/static/manual/troubleshooting/login.html" target="_blank">{{ _('troubleshooting')|uc_first }}</a>
+        <a href="/static/manual/troubleshooting/login.html" target="_blank" rel="noopener noreferrer">{{ _('troubleshooting')|uc_first }}</a>
     </p>
 {% endblock %}
