--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -17,7 +17,7 @@
                     <li class="changelog">
                         {% if issue_number %}
                             {{ issue_type|uc_first }}
-                            <a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/issues/{{ issue_number }}">
+                            <a target="_blank" rel="noopener noreferrer" href="https://redmine.openatlas.eu/issues/{{ issue_number }}">
                                 #{{ issue_number }}
                             </a>
                             {{ issue_text|safe }}
