--- a/openatlas/templates/index/feedback.html
+++ b/openatlas/templates/index/feedback.html
@@ -11,7 +11,7 @@
         <li>
             <p>
                 {{ _('feedback redmine') }}:
-                <a href="http://redmine.openatlas.eu/projects/uni" target="_blank" rel="noopener">
+                <a href="https://redmine.openatlas.eu/projects/uni" target="_blank" rel="noopener noreferrer">
                     https://redmine.openatlas.eu
                 </a>
             </p>
