Refactor: moved index buttons from template to view

--- a/openatlas/templates/entity/index.html
+++ b/openatlas/templates/entity/index.html
@@ -12,25 +12,9 @@
         <div class="col">
             <div class="toolbar">
                 {{ ('menu/' + class_)|manual }}
-                {% if 'contributor'|is_authorized %}
-                        {% if class_ in ['actor', 'event'] %}
-                            {% for code in config.CLASS_CODES[class_] %}
-                                {{ (code|get_class_name)|button(url_for(class_ + '_insert', code=code)) }}
-                            {% endfor %}
-                        {% elif class_ == 'object' %}
-                            {{ 'E84'|get_class_name|button(url_for('object_insert')) }}
-                        {% elif class_ == 'reference' %}
-                            {{ _('bibliography')|button(url_for('reference_insert', category='bibliography')) }}
-                            {{ _('edition')|button(url_for('reference_insert', category='edition')) }}
-                            {{ _('external reference')|button(url_for('reference_insert', category='external_reference')) }}
-                        {% elif class_ == 'reference_system' %}
-                            {% if 'manager'|is_authorized %}
-                                {{ _('reference system')|button(url_for('reference_system_insert')) }}
-                            {% endif %}
-                        {% else %}
-                            {{ _(class_)|button(url_for(class_ + '_insert')) }}
-                        {% endif %}
-                {% endif %}
+                {% for button in buttons %}
+                    {{ button }}
+                {% endfor %}
             </div>
             {{ table.display() }}
         </div>
