--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -29,7 +29,7 @@
                         {% if 'manager'|is_authorized %}
                             {{  _('edit')|button(url_for('admin_settings', category='files')) }}
                         {% endif %}
-                        {{ _('list')|button(url_for('file_index')) }}
+                        {{ _('list')|button(url_for('index', class_='file')) }}
                         {{ _('file')|button(url_for('file_insert')) }}
                     </div>
                     <div style="float:left;">
