--- a/openatlas/templates/entity/insert.html
+++ b/openatlas/templates/entity/insert.html
@@ -4,5 +4,26 @@
     {{ crumb|crumb2 }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form(manual_page='entity/' + view_name) }}
+    {% if view_name != 'place' %}
+        {{ form|display_form(manual_page='entity/' + view_name) }}
+    {% else %}
+        <div class="row">
+            <div class="col-4">
+                <div id='map-info-display' style="float:left;">
+                    {{ form|display_form(manual_page='entity/' + view_name) }}
+                </div>
+            </div>
+            <div class="col-8">
+                <div id="map" class="map"></div>
+            </div>
+            <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.css">
+            <script src="/static/vendor/leaflet-1.3.4/EasyButton-2.3.0/src/easy-button.js"></script>
+            <script src="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.js"></script>
+            <script src="/static/js/map/map.js"></script>
+            <script src="/static/js/map/draw.js"></script>
+        </div>
+    {% endif %}
 {% endblock %}
+
+
+
