Refactor: merged reference insert/update to entity

--- a/openatlas/templates/entity/insert.html
+++ b/openatlas/templates/entity/insert.html
@@ -36,4 +36,5 @@
             <script src="/static/js/map/draw.js"></script>
         </div>
     {% endif %}
+    {{ view_name|display_citation_example }}
 {% endblock %}
