--- a/openatlas/templates/note/update.html
+++ b/openatlas/templates/note/update.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block title_name %} - {{ _('note')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_(entity.view_name), entity.view_name + '_index'], entity, _('edit note')]|crumb }}
+    {{ crumb|crumb2 }}
 {% endblock %}
 {% block content %}
     {{ form|display_form }}
