--- a/openatlas/templates/entity/add_reference.html
+++ b/openatlas/templates/entity/add_reference.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('file')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_(entity.view_name), entity.view_name + '_index'], entity, _('link') + ' ' + _('reference')|uc_first]|crumb }}
+    {{ crumb|crumb2 }}
 {% endblock %}
 {% block content %}
-    *{{ form|display_form }}
+    {{ form|display_form }}
 {% endblock %}
