Refactor: merged display form templates

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -51,6 +51,8 @@
         {{ session['settings']['site_name'] }}
         {% if title %}
             - {{ title|uc_first }}
+        {% elif entity %}
+            - {{ entity.name }}
         {% endif %}
     </title>
 </head>
