Adapting manual links to new system

--- a/openatlas/templates/entity/index.html
+++ b/openatlas/templates/entity/index.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col">
             <div class="toolbar">
-                {{ ('menu/' + class_)|manual }}
+                {{ ('entity/' + class_)|manual }}
                 {% for button in buttons %}
                     {{ button }}
                 {% endfor %}
