--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -21,7 +21,7 @@
             <div class="tab-content">
                 <div class="tab-pane fade show active" role="tabpanel" id="tab-files">
                     <div class="toolbar">
-                        {{ 'admin/files'|manual }}
+                        {{ 'entity/file'|manual }}
                         {% if 'manager'|is_authorized %}
                             {{  _('edit')|button(url_for('admin_settings', category='files')) }}
                         {% endif %}
