New manual structure

--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="toolbar">
-        {{ 'form/type'|manual }}
+        {{ 'entity/type'|manual }}
     </div>
     <div>
         <ul class="nav nav-tabs" role="tablist">
