--- a/openatlas/templates/login/index.html
+++ b/openatlas/templates/login/index.html
@@ -15,6 +15,12 @@
         </p>
     {% endif %}
     <p>
-        <a href="/static/manual/troubleshooting/login.html" target="_blank" rel="noopener noreferrer">{{ _('troubleshooting')|uc_first }}</a>
+        <a
+          class="{{ config['CSS']['button']['primary'] }}"
+          href="/static/manual/troubleshooting/login.html"
+          target="_blank"
+          rel="noopener noreferrer">
+                <i class="fas fa-book"></i> {{ _('troubleshooting')|uc_first }}
+        </a>
     </p>
 {% endblock %}
