--- a/openatlas/templates/entity/view.html
+++ b/openatlas/templates/entity/view.html
@@ -13,7 +13,7 @@
             <div>
                 {{ entity|display_profile_image }}
                 <div style="float:left;">
-                    {{ info|display_info }}
+                    {{ entity.info_data|display_info }}
                     {{ entity|note }}
                     {{ entity|display_external_references }}
                     {{ entity|description }}
