--- a/openatlas/templates/entity/view.html
+++ b/openatlas/templates/entity/view.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-6">
             <div class="toolbar">
-                {{ ('entity/' + entity.view_name)|manual }}
+                {{ ('entity/' + entity.class_.name)|manual }}
                 {{ buttons|join(' ') }}
                 {{ entity.id|bookmark_toggle }}
                 {{ entity|download_button }}
