Refactor index view param

--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -25,8 +25,8 @@
                         {% if 'manager'|is_authorized %}
                             {{  _('edit')|button(url_for('admin_settings', category='files')) }}
                         {% endif %}
-                        {{ _('list')|button(url_for('index', class_='file')) }}
-                        {{ _('file')|button(url_for('insert', class_='file')) }}
+                        {{ _('list')|button(url_for('index', view='file')) }}
+                        {{ _('file')|button(url_for('insert', view='file')) }}
                     </div>
                     <div style="float:left;">
                         {% for dir, value in writeable_dirs.items() %}
