--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -26,7 +26,7 @@
                             {{  _('edit')|button(url_for('admin_settings', category='files')) }}
                         {% endif %}
                         {{ _('list')|button(url_for('index', view='file')) }}
-                        {{ _('file')|button(url_for('insert', view='file')) }}
+                        {{ _('file')|button(url_for('insert', class_='file')) }}
                     </div>
                     <div style="float:left;">
                         {% for dir, value in writeable_dirs.items() %}
