Refactor type form selection

--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -60,7 +60,7 @@
                                                     <p style="margin-top:0;">
                                                         <strong>{{ _('forms')|uc_first }}</strong>:
                                                         {% for form in node.forms.values() %}
-                                                            {{ form.name }}{{ "," if not loop.last }}
+                                                            {{ form.label }}{{ "," if not loop.last }}
                                                         {% endfor %}
                                                     </p>
                                                 {% endif %}
