--- a/openatlas/templates/entity/update.html
+++ b/openatlas/templates/entity/update.html
@@ -8,7 +8,8 @@
             {{ _('reload')|button(url_for('update', id_=entity.id)) }}
         </p>
     {% endif %}
-    {% if entity.class_.view != 'place' %}
+    {% if entity.class_.view not in ['artifact', 'place'] %}
+        *here*
         {{ form|display_form(manual_page='entity/' + entity.class_.view) }}
         {{ entity.class_.view|display_citation_example }}
     {% else %}
