New model images with Nina

--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -6,6 +6,9 @@
     <div style="float:left">
         <a href="/static/images/model/openatlas_schema.png">
             <img src="/static/images/model/openatlas_schema.png" style="width:500px" alt="OpenAtlas schema">
+        </a><br>
+        <a href="/static/images/model/openatlas_schema2.png">
+            <img src="/static/images/model/openatlas_schema2.png" style="width:500px" alt="OpenAtlas schema">
         </a>
     </div>
     <div style="float:left;margin-left:1em;">
