--- a/openatlas/templates/model/network2.html
+++ b/openatlas/templates/model/network2.html
@@ -46,7 +46,7 @@
         <div>
             <div id="classes" style="float:left">
                 {% for item in form.classes %}
-                    {{ form['color_' + item.data] }} {{ item.label }}<br>
+                    {{ form[item.data] }} {{ item.label }}<br>
                 {% endfor %}
             </div>
         </div>
