Database interface: tests, cleanup and fixes

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -174,15 +174,9 @@
     {% endwith %}
     <main>
         <div id="content">
-            <div style="float:left" class="container-fluid">{% block content %}{% endblock %}</div>
-            {% if session['settings']['debug_mode'] and 'admin'|is_authorized %}
-                <div class="data-table"
-                     style="float:right;margin:1em;position: absolute;right: 5px;background: rgba(230,219,0,0.4);top: 150px;padding: 5px;">
-                    <p>Debug</p>
-                    {{ debug_model|display_debug_info(form)|safe }}
-                </div>
-            {% endif %}
-            <div style="clear:both"></div>
+            <div style="float:left" class="container-fluid">
+                {% block content %}{% endblock %}
+            </div>
         </div>
     </main>
 </body>
