--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -153,7 +153,7 @@
     </nav>
     <nav aria-label="breadcrumb">
         <div class="breadcrumb">
-            {{ crumbs|lay_breadcrumbs }}
+            {{ crumbs|breadcrumb }}
             <div id="site-name-and-version">
                 {{ session['settings']['site_name'] }}
                 <a href="{{ url_for('index_changelog') }}">{{ config['VERSION'] }}</a>
