--- a/openatlas/templates/user/note.html
+++ b/openatlas/templates/user/note.html
@@ -3,6 +3,7 @@
     <div class="row">
         <div class="col-6">
             <div class="toolbar">
+                {{ 'tools/notes'|manual }}
                 {{ buttons|join(' ') }}
             </div>
             <h1>{{ _('note')|uc_first }}</h1>
